# tree-sitter-ipdl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  stress.sh  tree-sitter.json
bindings/c/: tree-sitter-ipdl.pc.in
bindings/c/tree_sitter/: tree-sitter-ipdl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ipdl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitteripdlTests/: TreeSitteripdlTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
