[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ipdl"
description = "Parser for Mozilla's IPDL (Inter-(thread|process) Protocol Definition Language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "ipdl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Paul Adenot", email = "padenot@mozilla.com" }]
requires-python = ">=3.10"
license.text = "MPL-2"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/padenot/tree-sitter-ipdl"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
